--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "lint": "npm run eslint && npm run stylelint",
     "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx ./",
     "eslint:fix": "npm run eslint -- --fix",
-    "stylelint": "stylelint \"**/*.{css,scss,less}\""
+    "stylelint": "stylelint \"**/*.{css,scss,less}\"",
+    "analyzer": "icejs build --analyzer"
   },
   "repository": {
     "type": "git",
